--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ databases = "^0.5.5"
 alembic = "^1.7.7"
 asyncpg = "^0.25.0"
 psycopg2 = "^2.9.3"
+aiohttp = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 
