--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.3"
 services:
   db:
     image: postgres:12
+    ports:
+      - "5432:5432"
     volumes:
       - ./database:/var/lib/postgresql/data/pgdata
     env_file:
