--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ click = "8.0.2"
 aiosqlite = "^0.19.0"
 croniter = "^1.3.14"
 aiohttp = "^3.8.4"
+autoflake = "1.7.7"
 
 [tool.poetry.dev-dependencies]
 mypy = "*"
