Added operation and category models to recognize different operations and classify the category

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,4 +37,4 @@ repos:
         entry: flake8
         language: system
         types: [ python ]
-        args: [ ]
+        args: [ --exclude=./alembic/* ]
