--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ aiosqlite = "^0.19.0"
 croniter = "^1.3.14"
 aiohttp = "^3.8.4"
 autoflake = "1.7.7"
+spacy = "^3.5.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "*"
