Split operations by regular, future, past. Temporary removed wallets module.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-complexity = 8
 max-line-length = 120
-ignore = W503, P103, D,C101, B008, R505, ANN101, ANN003, A003, R503, ANN002, PT023, SIM300, G004,
+ignore = W503, P103, D,C101, B008, R505, ANN101, ANN003, A003, R503, ANN002, PT023, SIM300, G004,ANN102
 exclude = node_modules,env,venv,venv36,tests/test_files/, alembic/
 max-annotations-complexity = 4
 var_names_exclude_pathes = node_modules,env,venv,venv36,
