Refactored exception handler, remove loguru, added sentry to catch all errors

--- a/example.env
+++ b/example.env
@@ -5,3 +5,7 @@ STACK_NAME=pyfinancebot
 PROJECT_NAME=PyFinancebot
 
 BOT_TOKEN=
+
+AI_MODELS_DIR=your_project_dir_absolute_path/models
+
+SENTRY_DSN=
