--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.9"
 aiogram = "^2.19"
-loguru = "^0.6.0"
 pydantic = {extras = ["dotenv"], version = "^1.10.7"}
 SQLAlchemy = "^1.3.23"
 databases = "^0.6.2"
@@ -22,6 +21,7 @@ croniter = "^1.3.14"
 aiohttp = "^3.8.4"
 autoflake = "1.7.7"
 spacy = "^3.5.2"
+sentry-sdk = "^1.24.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "*"
