--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ aiohttp = "^3.8.4"
 autoflake = "1.7.7"
 spacy = "^3.5.2"
 sentry-sdk = "^1.24.0"
+certifi = "2023.7.22"
 
 [tool.poetry.dev-dependencies]
 mypy = "*"
