--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+default_language_version:
+  python: python3.10
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -8,33 +11,52 @@ repos:
     rev: v2.4.0
     hooks:
       - id: add-trailing-comma
+        exclude: '(venv|alembic|tests|__pycache__)/.*|__init__.py'
 
-  - repo: local
+  - repo: https://github.com/pycqa/autoflake
+    rev: v1.7.8
     hooks:
       - id: autoflake
-        name: autoflake
-        entry: autoflake
-        language: system
         types: [ python ]
-        args: [ --remove-all-unused-imports, --recursive, --remove-unused-variables, --in-place, --exclude=__init__.py ]
+        exclude: '(venv|alembic|tests|__pycache__)/.*|__init__.py'
+        args: [ --remove-all-unused-imports, --recursive, --remove-unused-variables, --in-place ]
 
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
       - id: isort
-        name: isort
-        entry: isort
-        language: system
         types: [ python ]
-        args: [ ]
+        exclude: '(venv|alembic|tests|__pycache__)/.*'
+        args: [ --multi-line=3, --trailing-comma, --force-grid-wrap=0, --use-parentheses, --ensure-newline-before-comments, --line-length=120 ]
 
+  - repo: https://github.com/psf/black
+    rev: 22.10.0
+    hooks:
       - id: black
-        name: black
-        entry: black
-        language: system
         types: [ python ]
-        args: [ ]
+        exclude: '(venv|alembic|tests|__pycache__)/.*'
+        args: [ --line-length=120, --target-version=py38, --skip-string-normalization ]
 
+  - repo: https://github.com/pycqa/flake8
+    rev: 5.0.4
+    hooks:
       - id: flake8
-        name: flake8
-        entry: flake8
-        language: system
         types: [ python ]
-        args: [ --exclude=./alembic/* ]
+        exclude: '(venv|alembic|tests|__pycache__)/.*'
+        args: [
+          "--max-line-length=120",
+          "--ignore=D101,W503,C901,E501,E203,ANN002,ANN003,ANN101,ANN102",
+          "--max-complexity=10",
+          "--per-file-ignores=__init__.py:F401"
+        ]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.5.1
+    hooks:
+      - id: mypy
+        types: [ python ]
+        exclude: '(venv|alembic|tests|__pycache__)/.*'
+        args: [
+          "--disable-error-code=import",
+        ]
+
