--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.9"
 aiogram = "^2.19"
-pydantic = {extras = ["dotenv"], version = "^1.10.7"}
 SQLAlchemy = "^1.3.23"
 databases = "^0.6.2"
 alembic = "^1.7.7"
@@ -20,9 +19,13 @@ aiosqlite = "^0.19.0"
 croniter = "^1.3.14"
 aiohttp = "^3.8.4"
 autoflake = "1.7.7"
-spacy = "^3.5.2"
 sentry-sdk = "^1.24.0"
 certifi = "2023.7.22"
+uvicorn = "^0.30.6"
+fastapi = "^0.115.0"
+spacy = "^3.7.6"
+pydantic = "^2.9.2"
+pydantic-settings = "^2.5.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "*"
